--- a/frontend_react/index.html
+++ b/frontend_react/index.html
@@ -8,7 +8,7 @@
   <title>frontend_react</title>
 </head>
 
-<body class="dark-theme">
+<body class="dark-theme bg-[#050505] text-white">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
